force-app/main/default/objects/ValidationAPISettings__mdt/ValidationAPISettings__mdt.object-meta.xml
<CustomObject>
    <label>ValidationAPISettings</label>
    <pluralLabel>ValidationAPISettings</pluralLabel>
</CustomObject>