force-app/main/default/objects/ValidationAPISettings__mdt/fields/APIToken__c.field-meta.xml
<CustomField>
    <fullName>APIToken__c</fullName>
    <label>APIToken</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>