force-app/main/default/objects/ValidationAPISettings__mdt/fields/DefaultCountry__c.field-meta.xml
<CustomField>
    <fullName>DefaultCountry__c</fullName>
    <label>DefaultCountry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>