force-app/main/default/objects/ValidationAPISettings__mdt/fields/KeyValue__c.field-meta.xml
<CustomField>
    <fullName>KeyValue__c</fullName>
    <label>KeyValue</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>